stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unknown_imported_module.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unknown_imported_module.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown imported module
   ╭─[tests/fixtures/diagnostics/types/unknown_imported_module.ml:2:15]
 1 │ fn main() {
 2 │   let value = Missing.value;
   ·               ──────┬──────
   ·                     ╰── `Missing` has not been brought into scope with `use Missing`
 3 │   println("bad")
   ╰────
  help: add a top-level `use` declaration and pass --sig-dir
