stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unknown_imported_record_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unknown_imported_record_pattern.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown record pattern
   ╭─[tests/fixtures/diagnostics/types/unknown_imported_record_pattern.ml:8:5]
 7 │   dbg(match value {
 8 │     Result.missing { x: x } -> x,
   ·     ───────────┬───────────
   ·                ╰── `Result.missing` is not a known record type
 9 │     _ -> 0
   ╰────
  help: declare the record with a top-level `type` declaration
