stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unsupported_nested_path.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unsupported_nested_path.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported nested path
   ╭─[tests/fixtures/diagnostics/types/unsupported_nested_path.ml:4:19]
 3 │ fn main() {
 4 │   let predicate = Result.is_ok.extra;
   ·                   ─────────┬────────
   ·                            ╰── stage0 can resolve `Result.is_ok`, but this path has more segments
 5 │   println("bad")
   ╰────
  help: use a two-segment imported path or bind the intermediate value first
