stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unsupported_nested_path_call.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unsupported_nested_path_call.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported nested path call
   ╭─[tests/fixtures/diagnostics/types/unsupported_nested_path_call.ml:5:7]
 4 │   let value = Ok(1);
 5 │   dbg(Result.is_ok.extra(value))
   ·       ────────────┬────────────
   ·                   ╰── stage0 can call `Result.is_ok(...)`, but this callee has more path segments
 6 │ }
   ╰────
  help: call a two-segment imported function or bind the intermediate value
        first
