stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_variant_payload_arity.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/variant_payload_arity.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × Some expects 1 argument(s)
   ╭─[tests/fixtures/diagnostics/types/variant_payload_arity.ml:4:7]
 3 │ fn main() {
 4 │   dbg(Some())
   ·       ───┬──
   ·          ╰── found 0 argument(s)
 5 │ }
   ╰────
  help: check the call arity
