stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_variant_payload_pattern_arity.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/variant_payload_pattern_arity.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × variant payload pattern arity mismatch
   ╭─[tests/fixtures/diagnostics/types/variant_payload_pattern_arity.ml:6:5]
 5 │   dbg(match value {
 6 │     Some(left, right) -> left,
   ·     ────────┬────────
   ·             ╰── `Some` carries 1 payload value(s), but this pattern has 2
 7 │     _ -> 0
   ╰────
  help: match the constructor with the same number of payload patterns
